[package]
name = "express-rs"
version = "0.1.0"
authors = ["garritfra <garritfranke@gmail.com>"]
edition = "2018"
description = "Express.js clone written in your favorite language"
licence = "apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "get"
path = "examples/get.rs"