[package]
name = "express-rs"
version = "0.0.2"
authors = ["garritfra <garritfranke@gmail.com>"]
edition = "2018"
repository = "https://github.com/garritfra/express-rs/"
description = "Express.js clone written in your favorite language"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "get"
path = "examples/get.rs"
